fix: aligned footer at the bottom

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -7,3 +7,7 @@
 .scroll-to-top {
     cursor: pointer;
 }
+
+.sticky-footer {
+    margin-top: auto;
+}
